# src/Mimo.Api.Sdk/Generated/Models/TransferTicketResponse.cs
@@ -1,0 +1,69 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions.Serialization;
+using System.Collections.Generic;
+using System.IO;
+using System;
+namespace Mimo.Api.Sdk.Models
+{
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    #pragma warning disable CS1591
+    public partial class TransferTicketResponse : IAdditionalDataHolder, IParsable
+    #pragma warning restore CS1591
+    {
+        /// <summary>Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.</summary>
+        public IDictionary<string, object> AdditionalData { get; set; }
+        /// <summary>The message property</summary>
+#if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
+#nullable enable
+        public string? Message { get; set; }
+#nullable restore
+#else
+        public string Message { get; set; }
+#endif
+        /// <summary>The newTicketId property</summary>
+        public Guid? NewTicketId { get; set; }
+        /// <summary>
+        /// Instantiates a new <see cref="global::Mimo.Api.Sdk.Models.TransferTicketResponse"/> and sets the default values.
+        /// </summary>
+        public TransferTicketResponse()
+        {
+            AdditionalData = new Dictionary<string, object>();
+        }
+        /// <summary>
+        /// Creates a new instance of the appropriate class based on discriminator value
+        /// </summary>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Models.TransferTicketResponse"/></returns>
+        /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
+        public static global::Mimo.Api.Sdk.Models.TransferTicketResponse CreateFromDiscriminatorValue(IParseNode parseNode)
+        {
+            if(ReferenceEquals(parseNode, null)) throw new ArgumentNullException(nameof(parseNode));
+            return new global::Mimo.Api.Sdk.Models.TransferTicketResponse();
+        }
+        /// <summary>
+        /// The deserialization information for the current model
+        /// </summary>
+        /// <returns>A IDictionary&lt;string, Action&lt;IParseNode&gt;&gt;</returns>
+        public virtual IDictionary<string, Action<IParseNode>> GetFieldDeserializers()
+        {
+            return new Dictionary<string, Action<IParseNode>>
+            {
+                { "message", n => { Message = n.GetStringValue(); } },
+                { "newTicketId", n => { NewTicketId = n.GetGuidValue(); } },
+            };
+        }
+        /// <summary>
+        /// Serializes information the current object
+        /// </summary>
+        /// <param name="writer">Serialization writer to use to serialize this model</param>
+        public virtual void Serialize(ISerializationWriter writer)
+        {
+            if(ReferenceEquals(writer, null)) throw new ArgumentNullException(nameof(writer));
+            writer.WriteStringValue("message", Message);
+            writer.WriteGuidValue("newTicketId", NewTicketId);
+            writer.WriteAdditionalData(AdditionalData);
+        }
+    }
+}
+#pragma warning restore CS0618
