# src/Mimo.Api.Sdk/Generated/Tickets/Transfer/TransferRequestBuilder.cs
@@ -36,22 +36,22 @@ namespace Mimo.Api.Sdk.Tickets.Transfer
         /// <summary>
         /// Transfiere el ticket a otro rol o funcionario (query: id).
         /// </summary>
-        /// <returns>A <see cref="Stream"/></returns>
+        /// <returns>A <see cref="global::Mimo.Api.Sdk.Models.TransferTicketResponse"/></returns>
         /// <param name="body">The request body</param>
         /// <param name="cancellationToken">Cancellation token to use when cancelling requests</param>
         /// <param name="requestConfiguration">Configuration for the request such as headers, query parameters, and middleware options.</param>
 #if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
 #nullable enable
-        public async Task<Stream?> PostAsync(global::Mimo.Api.Sdk.Models.TransferTicketRequest body, Action<RequestConfiguration<global::Mimo.Api.Sdk.Tickets.Transfer.TransferRequestBuilder.TransferRequestBuilderPostQueryParameters>>? requestConfiguration = default, CancellationToken cancellationToken = default)
+        public async Task<global::Mimo.Api.Sdk.Models.TransferTicketResponse?> PostAsync(global::Mimo.Api.Sdk.Models.TransferTicketRequest body, Action<RequestConfiguration<global::Mimo.Api.Sdk.Tickets.Transfer.TransferRequestBuilder.TransferRequestBuilderPostQueryParameters>>? requestConfiguration = default, CancellationToken cancellationToken = default)
         {
 #nullable restore
 #else
-        public async Task<Stream> PostAsync(global::Mimo.Api.Sdk.Models.TransferTicketRequest body, Action<RequestConfiguration<global::Mimo.Api.Sdk.Tickets.Transfer.TransferRequestBuilder.TransferRequestBuilderPostQueryParameters>> requestConfiguration = default, CancellationToken cancellationToken = default)
+        public async Task<global::Mimo.Api.Sdk.Models.TransferTicketResponse> PostAsync(global::Mimo.Api.Sdk.Models.TransferTicketRequest body, Action<RequestConfiguration<global::Mimo.Api.Sdk.Tickets.Transfer.TransferRequestBuilder.TransferRequestBuilderPostQueryParameters>> requestConfiguration = default, CancellationToken cancellationToken = default)
         {
 #endif
             if(ReferenceEquals(body, null)) throw new ArgumentNullException(nameof(body));
             var requestInfo = ToPostRequestInformation(body, requestConfiguration);
-            return await RequestAdapter.SendPrimitiveAsync<Stream>(requestInfo, default, cancellationToken).ConfigureAwait(false);
+            return await RequestAdapter.SendAsync<global::Mimo.Api.Sdk.Models.TransferTicketResponse>(requestInfo, global::Mimo.Api.Sdk.Models.TransferTicketResponse.CreateFromDiscriminatorValue, default, cancellationToken).ConfigureAwait(false);
         }
         /// <summary>
         /// Transfiere el ticket a otro rol o funcionario (query: id).
@@ -71,6 +71,7 @@ namespace Mimo.Api.Sdk.Tickets.Transfer
             if(ReferenceEquals(body, null)) throw new ArgumentNullException(nameof(body));
             var requestInfo = new RequestInformation(Method.POST, UrlTemplate, PathParameters);
             requestInfo.Configure(requestConfiguration);
+            requestInfo.Headers.TryAdd("Accept", "application/json");
             requestInfo.SetContentFromParsable(RequestAdapter, "application/json", body);
             return requestInfo;
         }
